--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&family=Great+Vibes&family=Linden+Hill:ital@0;1&family=Milonga&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Pinyon+Script&display=swap" rel="stylesheet">
     <meta property="og:image" content="rr.png" />
+    <meta property="og:url" content="https://rahma-ridho.site/" />
+    <meta property="og:title" content="You are invited to wedding Rahma & Ridho">
+    <meta property="og:type" content="website">
   </head>
   <body>
     <div id="root"></div>
