--- a/index.html
+++ b/index.html
@@ -6,13 +6,30 @@
     <link rel="icon" type="image/svg+xml" href="/r.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wedding Invitation, Rahma & Ridho</title>
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&family=Great+Vibes&family=Linden+Hill:ital@0;1&family=Milonga&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Pinyon+Script&display=swap" rel="stylesheet"> -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&family=Great+Vibes&family=Linden+Hill:ital@0;1&family=Milonga&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Pinyon+Script&display=swap" rel="stylesheet">
-    <meta property="og:image" content="rr.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300;400;500;600;700&family=Great+Vibes&family=Linden+Hill:ital@0;1&family=Milonga&family=Moderustic:wght@300..800&display=swap"
+      rel="stylesheet"
+    />
+    <meta property="title" content="Rahma & Ridho" />
+    <meta
+      property="description"
+      content="Dear You're Invited to Our Wedding Ceremony - Pernikahan Rahma &amp; Ridho - Minggu, 1 September 2024"
+    />
+    <meta property="og:image" content="https://rahma-ridho.site/rr-og.png" />
     <meta property="og:url" content="https://rahma-ridho.site/" />
-    <meta property="og:title" content="You are invited to wedding Rahma & Ridho">
-    <meta property="og:type" content="website">
+    <meta property="og:title" content="Rahma & Ridho" />
+    <meta
+      property="og:description"
+      content="Dear You're Invited to Our Wedding Ceremony - Pernikahan Rahma &amp; Ridho - Minggu, 1 September 2024"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="in_ID" />
+    <meta property="og:site_name" content="rahma-ridho.site" />
   </head>
   <body>
     <div id="root"></div>
